trunk/Archive2/52/9e1d6bac714c37/output
main.cpp:5:6: error: redefinition of 'q' with a different type: 'long' vs 'int'
long q;
     ^
main.cpp:2:16: note: previous definition is here
    extern int q;
               ^
1 error generated.
