trunk/Archive2/52/9e1d6bac714c37/main.cpp
int main() {
    extern int q;
}

long q;